2012-03-29  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt: Renamed MicroCalc
  cartridge mapping to Ultracart - that's the name printed at the cartridge's
  PCB.


2012-03-26  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/USAGE: Added support
  for the MicroCalc cartridge mapping.


2012-03-24  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.c, cfg.c, memory.[ch], ui.c: Simplify Axlon RAM code. Fix bug with
  Axlon and Mosaic RAM switching to home bank on state read. Add option to
  control Axlon RAM settings in GUI. Save Axlon RAM settings in config.


2012-03-23  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.[ch], cfg.c, ui.c: Fixed 1200XL jumper emulation - the machine has
  only one onboard jumper, not four.

* atari.c, cfg.c, memory.[ch], ui.c: Simplify Mosaic RAM code. Add option to
  control Mosaic RAM settings in GUI. Save Mosaic RAM setting in config.


2012-03-18  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.c, emuos.[ch], memory.c, Makefile.in, android/jni/Amdroid.mk.in,
  dc/Makefile.dc, win32/msc/Makefile: Always take UI font from EMUOS - fixes
  missing font when running the emulator in 5200 mode without configured OS
  ROMs.

* atari.[ch], cartridge.c, cfg.c, devices.c, esc.c, input.c, memory.c, pia.c,
  screen.c, sysrom.c, ui_basic.c, ui.c, sdl/input.c, android/jni/jni.c,
  atari800.man, DOC/USAGE:
  Reworked support for machine types. All XL/XE features can be enabled/
  disabled independently. UI menu "Select System" renamed to "System Settings"
  and reworked - now it only lists systems manufactured originally, with
  additional options for configuration.

* devices.c, esc.c, sysrom.[ch], ui.c, atari800.man, DOC/USAGE: Support OS
  revisions from the Arabic 65XE and prototype XL machines.


2012-03-11  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* pia.c: Fix recently-introduced bug with MEMORY_cartA0BF_enabled being saved